src/Styles/Card.css
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  padding: 2px 16px;
  border-style: solid;
  border-width: 2px;
  border-radius: 5px;
  width: 30rem;
  height: 14rem;
  margin-bottom: 50px;
}

.card:hover {
  /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
    rgba(0, 0, 0, 0.22) 0px 15px 12px; */
  /* box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px,
    rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px,
    rgba(240, 46, 170, 0.05) 25px 25px; */
  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
  scale: 1.1;
}

.card_header {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 100%;
}

.card_list {
  display: flex;
}

